dev-thib-1/service_1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-1
  name: service-frontend-1
  namespace: dev-thib-1
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend-1
