dev-thib-1/service_extIP_1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-1
  name: service-eip-frontend-1
  namespace: dev-thib-1
spec:
  externalIPs:
  - 192.168.22.205
  - 192.168.22.204
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31786
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend-1
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.168.22.205
    - ip: 192.168.22.204
