dev-thib-1/service_route_1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend-1
  name: depl-frontend-1
  namespace: dev-thib-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-1
  strategy: {}
  template:
    metadata:
      labels:
        app: frontend-1
    spec:
      containers:
      - image: registry.ocp.lan:15443/lab/ubidebug:latest
        name: ubidebug
        volumeMounts:
          - name: index-html-configmap-1
            mountPath: /usr/share/nginx/html/
      volumes:
      - name: index-html-configmap-1
        configMap:
          name: index-html-configmap-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend-1
  name: depl-backend-1
  namespace: dev-thib-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-1
  strategy: {}
  template:
    metadata:
      labels:
        app: backend-1
    spec:
      containers:
      - image: registry.ocp.lan:15443/lab/ubidebug:latest
        name: ubidebug1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-1
  name: depl-test-1
  namespace: dev-thib-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-1
  strategy: {}
  template:
    metadata:
      labels:
        app: test-1
    spec:
      containers:
      - image: registry.ocp.lan:15443/lab/ubidebug:latest
        name: ubitest1
        volumeMounts:
          - name: configmap-projected
            mountPath: /etc/pki/ca-trust/source/anchors/
            readOnly: true
      volumes:
      - name: configmap-projected
        projected:
          sources:
            - configMap:
                name: registry-ca
                name: openshift-service-ca.crt

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-1
  name: service-frontend-1
  namespace: dev-thib-1
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend-1
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: frontend-1
  name: frontend-1
  namespace: dev-thib-1
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: service-frontend-1
    weight: 100
